Fix alignment bugs

--- a/css/danebook.scss
+++ b/css/danebook.scss
@@ -14,6 +14,8 @@ body {
   }
 
   h1 {
+    color: white;
+    font-size: 48px;
     line-height: 64px;
   }
 
@@ -32,19 +34,24 @@ body {
   }
 }
 
-#logo {
-  color: white;
-  font-size: 48px;
-}
+
 
 #hero-text {
-  li {
-    line-height: 40px;
-    font-size: 20px;
+  background-color: white;
+  ul {
+    line-height: 54px;
+    font-size: 16px;
     color: #777;
   }
 }
 
-#sign-up-button {
-  width: 100%;
+#sign-up-form {
+  h3 {
+    font-size: 48px;
+    padding-bottom: 20px;
+  }
+
+  button {
+    width: 100%;
+  }
 }
